<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.joao.projectfinal.ModifyActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/form_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top|left"
                    android:hint="@string/form_title"
                    android:inputType="textMultiLine"
                    android:scrollHorizontally="false" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.example.joao.projectfinal.custom.CustomEditText
                    android:id="@+id/form_genres"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top|left"
                    android:hint="@string/form_genres"
                    android:inputType="textMultiLine"
                    android:scrollHorizontally="false" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/form_eps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top|left"
                    android:hint="@string/form_eps"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@android:color/white"/>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/form_rd_status">
                    <RadioButton
                        android:id="@+id/rd_watching"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/form_watching"
                        android:checked="true"/>
                    <RadioButton
                        android:id="@+id/rd_plan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/form_plan_to_watch" />
                    <RadioButton
                        android:id="@+id/rd_complete"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/form_complete" />
            </RadioGroup>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/form_score_title"
                    android:gravity="center"/>
                <RatingBar
                    android:id="@+id/form_nota"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numStars="5"
                    android:stepSize="0.1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Salvar"
                    android:onClick="save"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Cancelar"
                    android:onClick="cancel"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Deletar"
                    android:onClick="del"/>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</LinearLayout>
